--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="row mt-4 pb-5">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card mb-3 card-custom-height">
-          <div class="row g-0">
+          <div class="row g-0 desktop-height">
             <div class="col-md-4">
               <img src="assets/img/card1.jpg" class="img-cards rounded-start" alt="...">
             </div>
@@ -152,7 +152,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card mb-3 card-custom-height">
-          <div class="row g-0">
+          <div class="row g-0 desktop-height">
             <div class="col-md-4">
               <img src="assets/img/card2.jpg" class="img-cards rounded-start" alt="...">
             </div>
@@ -182,7 +182,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card mb-3 card-custom-height">
-          <div class="row g-0">
+          <div class="row g-0 desktop-height">
             <div class="col-md-4">
               <img src="assets/img/card3.jpg" class="img-cards rounded-start" alt="...">
             </div>
@@ -212,7 +212,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card mb-3 card-custom-height">
-          <div class="row g-0">
+          <div class="row g-0 desktop-height">
             <div class="col-md-4">
               <img src="assets/img/card4.jpg" class="img-cards rounded-start" alt="...">
             </div>
